# ObservaTurismoCertificadoLosRios

./: README.md  pyproject.toml  requirements.txt
config/: settings.yaml
data/processed/: dataset_manifest.json  regiones_empresas.csv  suma_unidades_habitacionales.csv  tipos_alojamientos_empresas.csv  tipos_clase_guias.csv  tourism_metrics.csv
data/raw/: regiones_empresas.csv  suma_unidades_habitacionales.csv  tipos_alojamientos_empresas.csv  tipos_clase_guias.csv
docs/: distribucion_alojamientos_highcharts.html  index.html  interactive.js  participacion_alojamientos_donut.html  styles.css
notebooks/: turismo_certificado_insights.ipynb  turismo_interactivo_plotly copy.ipynb  turismo_interactivo_plotly.ipynb
scripts/: run_etl.py
src/empresas_certificadas_etl.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/funds_etl/: __init__.py  configuration.py  contracts.py  entities.py  pipeline.py
src/funds_etl/extractors/: csv_extractor.py
src/funds_etl/loaders/: __init__.py  filesystem_loader.py
src/funds_etl/transformers/: __init__.py  tourism_transformer.py
tests/: test_csv_extractor.py  test_pipeline.py
